<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/MargenTop"
            android:src="@drawable/sjm" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MargenLeft"
            android:layout_marginTop="@dimen/MargenTop"
            android:labelFor="@id/editText2"
            android:text="@string/LabelUsuario" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/MargenRight"
            android:layout_marginStart="@dimen/MargenLeft"
            android:layout_marginTop="@dimen/MargenTop"
            android:inputType="text|textPersonName" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/MargenTop"
            android:labelFor="@id/editText3"
            android:text="@string/LabelContraseña" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/MargenRight"
            android:layout_marginStart="@dimen/MargenLeft"
            android:layout_marginTop="@dimen/MargenTop"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/MargenLeft"
            android:layout_marginStart="@dimen/MargenRight"
            android:layout_marginTop="@dimen/MargenTop"
            android:text="@string/ButtonInicio" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/MargenRight"
            android:layout_marginStart="@dimen/MargenLeft"
            android:layout_marginTop="@dimen/MargenTop"
            android:text="@string/ButtonRegistrar" />

    </LinearLayout>


</ScrollView>